[package]
name = "tantivy_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt"] }
tantivy = "0.19"
uuid = "1.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dhat = "0.3.2"

[profile.release]
debug = 1

[features]
dhat-heap = []